--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -51,18 +51,20 @@
 \newpage
 
 % Chapitres
-\chapter{Introduction}
-\lipsum[1-2]
+\section{Introduction}
+\paragraph{Project Context}
 
-\chapter{Matériaux}
+\paragraph{Objectives}
+
+\section{Matériaux utilisés}
 \lipsum[3-4]
 
-\chapter{Mise en place}
+\section{Mise en place}
 \lipsum[5-6]
 
-\chapter{Fonctionnalités}
+\section{Fonctionnalités}
 \lipsum[7]
 
-\chapter{Pistes d'amélioration}
+\section{Pistes d'amélioration}
 \lipsum[8-9]
 \end{document}
