--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -49,7 +49,12 @@
     \centering
     \vspace*{4cm}
     {\Huge \textbf{Smart Glasses}}\\[1.5cm]
-    {\Large Authors : Sarah Nacim Evinia Oualid Romane}\\[0.5cm]
+    {\Large Authors :}\\
+    {\Large Sarah El Zeghendy}\\
+    {\Large Nacim Talaoubrid}\\
+    {\Large Evanthia Virginia Anastasopoulou}\\
+    {\Large Mohamed El Oualid Boudemagh}\\
+    {\Large Romane Couedel}\\[0.5cm]
     {\Large Master 2 : MSR 2025-2026}\\[3cm]
     \includegraphics[width=0.8\textwidth]{logo.png}% 
 \end{titlepage}
@@ -485,8 +490,13 @@ Some initial objectives could not be fully realized due to hardware limitations 
 
 Although not all planned objectives were achieved, the final system demonstrates a realistic and well-justified architectural trade-off. The successful integration of emotion recognition, obstacle-aware navigation, and a complete pneumatic haptic feedback system highlights the technical feasibility and relevance of the proposed smart glasses for assistive applications.
 
-\section{Pistes d'amélioration}
+\section{Conclusion}
 
+This project successfully demonstrates the feasibility of integrating emotion detection, obstacle awareness, and pneumatic haptic feedback into smart glasses. Despite the inherent constraints of a prototype development-limited resources, hardware reliability challenges, and computational trade-offs-the system achieves its core objectives through pragmatic engineering decisions.
+
+However, as a proof-of-concept prototype, the system relies on external components-an external computer for AI processing and a lead-acid battery for power-which currently prevent full wearability. These dependencies reflect the reality of prototype development and highlight areas for future miniaturization and optimization. A production version would require embedded processors powerful enough to handle AI computations on-board and lightweight, integrated power solutions.
+
+The integration of multiple technologies (computer vision, deep learning, embedded systems, and pneumatic actuation) demonstrates the technical feasibility of the proposed approach. While not all initially planned features were realized, the completed system provides a solid foundation for future iterations.
 \begin{thebibliography}{9}
 \bibitem{openpneu2024}
 Y. Tian, R. Su, X. Wang, N. B. Altin, G. Fang, and C. C. L. Wang,
