--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -497,6 +497,11 @@ This project successfully demonstrates the feasibility of integrating emotion de
 However, as a proof-of-concept prototype, the system relies on external components-an external computer for AI processing and a lead-acid battery for power-which currently prevent full wearability. These dependencies reflect the reality of prototype development and highlight areas for future miniaturization and optimization. A production version would require embedded processors powerful enough to handle AI computations on-board and lightweight, integrated power solutions.
 
 The integration of multiple technologies (computer vision, deep learning, embedded systems, and pneumatic actuation) demonstrates the technical feasibility of the proposed approach. While not all initially planned features were realized, the completed system provides a solid foundation for future iterations.
+
+
+
+\textbf{ Our git : \url{github.com/romanecouedel/projetmsr_smart_glasses}}
+
 \begin{thebibliography}{9}
 \bibitem{openpneu2024}
 Y. Tian, R. Su, X. Wang, N. B. Altin, G. Fang, and C. C. L. Wang,
